src/main/java/com/example/algoproject/errors/response/CommonResponse.java
package com.example.algoproject.errors.response;

import lombok.Getter;

@Getter
public class CommonResponse {
    int status;
    String message;
}
